# neobrew

./: .biome.jsonc  .cspell.yaml  .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlint.yaml  .miserc.toml  .prettierrc.toml  .shellcheckrc  .taplo.toml  .tombi.toml  Brewfile  Cargo.toml  README.md  TODO.md  biome.jsonc  clippy.toml  mise.development.env.sh  mise.development.toml  mise.production.env.sh  mise.production.toml  mise.toml  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.cspell/: companies.txt  miscellaneous.txt  people-names.txt  rust-crates.txt  rust.txt  shellscript.txt  software-terms.txt  software-tools.txt
.devcontainer/: devcontainer.json  post-create-command.sh
.devcontainer/features/homebrew-package/: devcontainer-feature.json  install-feature.sh  install.sh
.devcontainer/features/rust/: devcontainer-feature.json  install-feature.sh  install.sh
.devcontainer/scripts/: post-create-command.sh  post-start-command.sh
.github/: dependabot.yml
.github/actions/homebrew/: action.sh  action.yml
.github/actions/mise/: action.yml
.github/actions/rust/: action.sh  action.yml
.github/actions/sccache/: action.yml
.github/actions/summary/: action.sh  action.yml
.github/workflows/: reusable.yml  rust.yml
.mise/: config.development.env.bash  config.development.env.sh  config.development.toml  config.env.bash  config.production.env.bash  config.production.env.sh  config.production.toml  config.toml
.mise/scripts/: lint-cspell-dictionaries.sh  tasks-cspell-dictionaries.sh
src/: ext.rs  lib.rs  linker.rs  macros.rs  main.rs
src/artifact/: linux.rs  macos.rs  mod.rs
src/caches/: cask.rs  formula.rs  mod.rs
src/command/: install.rs  mod.rs  uninstall.rs
src/commands/: install.rs  mod.rs  uninstall.rs
src/compatibility/: linux.rs  macos.rs  mod.rs
src/context/: config.rs  mod.rs  project_dirs.rs
src/context/config/: cli.rs  global_env.rs  homebrew.rs  homebrew_config.rs  homebrew_env.rs  mod.rs  neobrew.rs  neobrew_config.rs
src/context/configs/: cli.rs  global_env.rs  homebrew.rs  homebrew_env.rs  mod.rs  neobrew.rs  neobrew_env.rs
src/context/dirs/: homebrew.rs  mod.rs  neobrew.rs
src/downloads/: cask.rs  formula.rs  mod.rs
src/ext/: mod.rs
src/ext/core/: result.rs
src/ext/serde/: mod.rs
src/ext/std/: mod.rs  path.rs  sync.rs
src/ext/tokio/: fs.rs  mod.rs  path.rs
src/linkers/: cask.rs  formula.rs  mod.rs
src/os/linux/: relocation.rs
src/os/macos/: codename.rs  codesign.rs  mach_o.rs  mod.rs  relocation.rs  semver.rs  tag.rs
src/package/: cask.rs  formula.rs  mod.rs
src/package/fetched/: cask.rs  formula.rs  mod.rs
src/package/installed/: cask.rs  formula.rs  mod.rs
src/package/pipelined/: cask.rs  formula.rs  mod.rs
src/package/prepared/: cask.rs  cask_stanza.rs  formula.rs  mod.rs
src/package/prepared/download/: cask.rs  formula.rs  mod.rs
src/package/raw/: cask.rs  formula.rs  mod.rs
src/package/resolved/: cask.rs  formula.rs  mod.rs
src/package/streamed/: cask.rs  formula.rs  mod.rs
src/pipeline/: channels.rs  file_writer.rs  mod.rs  state_committer.rs  state_store.rs
src/pipeline/action_operator/: dmg_extractor.rs  dmg_pourer.rs  linker.rs  mod.rs  pkg_extractor.rs
src/pipeline/handler/: atomic_writer.rs  mod.rs
src/pipeline/operator/: dmg_pourer.rs  hasher.rs  mod.rs  writer.rs
src/pipeline/operators/: hasher.rs  mod.rs  writer.rs
src/pipeline/pipe_operators/: mod.rs  pourer.rs
src/pipeline/piped_operator/: dmg_pourer.rs  mod.rs
src/pipeline/post_operator/: dmg_pourer.rs  mod.rs
src/pipeline/pull_connector/: extractor.rs  mod.rs  pourer.rs
src/pipeline/pull_operator/: archive_pourer.rs  mod.rs  temp_pourer.rs
src/pipeline/pull_operators/: mod.rs  pourer.rs
src/pipeline/push_connector/: hasher.rs  mod.rs  progressor.rs  writer.rs
src/pipeline/push_operator/: file_writer.rs  hasher.rs  mod.rs  pb_updater.rs  progress.rs  sha256_hasher.rs  temp_writer.rs
src/pipeline/push_operators/: hasher.rs  mod.rs  writer.rs
src/pipeline/sensor_operator/: mod.rs
src/pipeline/sensor_operator/artifactor/: linux.rs  macos.rs  mod.rs
src/pipeline/sensor_operator/relocator/: linux.rs  macos.rs  mod.rs
src/pipeline/tee_operators/: hasher.rs  mod.rs  writer.rs
src/placeholder/: mod.rs
src/receipt/: cask.rs  formula.rs  mod.rs
src/registries/: cask.rs  formula.rs  mod.rs
src/registries/compatibility/: linux.rs  macos.rs  mod.rs
src/registry/: cask.rs  formula.rs  mod.rs
src/relocation/: linux.rs  macos.rs  mod.rs
src/relocator/: linux.rs  macos.rs  mod.rs
src/streams/: cask.rs  formula.rs  mod.rs
src/util/: archive_format.rs  mod.rs  semver.rs
src/util/linux/: elf.rs  mod.rs
src/util/macos/: codename.rs  codesign.rs  mach_o.rs  mod.rs  tag.rs  xcode.rs
src/utils/: linker.rs  mod.rs  relocation.rs
src/utils/linux/: elf.rs  mod.rs  relocation.rs
src/utils/macos/: codesign.rs  mach_o.rs  mod.rs  relocation.rs
