#:schema https://www.schemastore.org/cargo.json

[package]
name = "neobrew"
version = "0.1.0"
authors = ["Cheeshian Chuah (shian15810) <shian15810@gmail.com>"]
edition = "2024"
description = "Neobrew (nbrew) - A DX-focused, Homebrew-interoperable package manager for macOS and Linux, written in Rust and powered by reactive pipelines built for extreme performance."
readme = "README.md"
repository = "https://github.com/shian15810/neobrew"
license = "MIT OR Apache-2.0"
build = "build/mod.rs"

[package.metadata.neobrew]
bin_name = "nbrew"
display_name = "Neobrew"

[dependencies]
anyhow = "1.0.102"
async-recursion = "1.1.1"
bytes = "1.11.1"
cfg-if = "1.0.4"
clap = { version = "4.5.60", features = ["cargo", "derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["serde", "tracing"] }
console-subscriber = "0.5.0"
enum_dispatch = "0.3.13"
envy = "0.4.2"
etcetera = "0.11.0"
figment = { version = "0.10.19", features = ["env"] }
flate2 = "1.1.9"
foyer = "0.22.3"
frunk = "0.4.4"
futures = "0.3.32"
indoc = "2.0.7"
itertools = "0.14.0"
proc-exit = "2.0.2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rustc_tools_util = "0.4.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.17.0"
sha2 = "0.10.9"
tar = "0.4.44"
tokio = { version = "1.50.0", features = ["process", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io-util", "rt"] }
tracing-subscriber = "0.3.22"

[build-dependencies]
anyhow = "1.0.102"
cargo_toml = "0.22.3"
rustc_tools_util = "0.4.2"
serde = "1.0.228"

[lints.rust]
deprecated_safe = { level = "warn", priority = -1 }
# future_incompatible = { level = "warn", priority = -1 }
keyword_idents = { level = "warn", priority = -1 }
# let_underscore = { level = "warn", priority = -1 }
# default = "allow"
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
linker_messages = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
# missing_docs = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
# unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"
# default = "warn"
dead_code = "allow"
# default = "deny"

[lints.rustdoc]
# default = "allow"
unescaped_backticks = "warn"
# default = "warn"
# default = "deny"

[lints.clippy]
pedantic = "warn"
# restriction = "warn"
clone_on_ref_ptr = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
pub_without_shorthand = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
unwrap_used = "warn"
# nursery = "warn"
branches_sharing_code = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unnecessary_struct_initialization = "warn"
use_self = "warn"
# cargo = "warn"
