#:schema https://www.schemastore.org/cargo.json
#:tombi toml-version = "v1.1.0"

[package]
name = "neobrew"
version = "0.1.0"
# tombi: lint.rules.unused-noqa.disabled = true
# tombi: lint.rules.deprecated.disabled = true
authors = ["Cheeshian Chuah (shian15810) <shian15810@gmail.com>"]
edition = "2024"
description = "Neobrew (nbrew) - A DX-focused, Homebrew-interoperable package manager for macOS and Linux, written in Rust and powered by reactive pipelines built for extreme performance."
repository = "https://github.com/shian15810/neobrew"
license = "MIT OR Apache-2.0"
build = "build/mod.rs"
publish = false
default-run = "nbrew"

[package.metadata.neobrew]
bin_name = "nbrew"
display_name = "Neobrew"

[[bin]]
name = "nbrew"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
arwen = "0.0.5"
astral-tokio-tar = "0.6.2"
async-compression = {
    version = "0.4.42",
    features = ["bzip2", "gzip", "tokio", "xz", "zstd"]
}
async-recursion = "1.1.1"
async-trait = "0.1.89"
async-walkdir = "2.1.0"
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
base16ct = "1.0.0"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["cargo"] }
clap-verbosity-flag = { version = "3.0.4", features = ["serde", "tracing"] }
console-subscriber = "0.5.0"
enum_dispatch = "0.3.13"
envy = "0.4.2"
etcetera = "0.11.0"
figment = "0.10.19"
foyer = "0.22.3"
frunk = "0.4.4"
futures = "0.3.32"
indicatif = "0.18.4"
indoc = "2.0.7"
infer = "0.19.0"
lazy-regex = "3.6.0"
oci-client = "0.17.0"
os_info = "3.15.0"
path-clean = "1.0.1"
pathdiff = "0.2.3"
plist = "1.9.0"
proc-exit = "2.0.2"
reqwest = "0.13.4"
rustc_tools_util = "0.4.2"
serde = "1.0.228"
serde_json = "1.0.150"
serde_repr = "0.1.20"
serde_with = "3.21.0"
sha2 = "0.11.0"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = {
    version = "1.52.3",
    features = ["process", "rt-multi-thread", "signal"],
}
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io-util", "rt"] }
tracing-subscriber = "0.3.23"
url = "2.5.8"
visibility = "0.1.1"

[build-dependencies]
anyhow = "1.0.102"
build-rs = "0.3.4"
cargo_toml = "0.22.3"
rustc_tools_util = "0.4.2"
serde = "1.0.228"

[target.'cfg(target_os = "macos")'.dependencies]
apple-codesign = "0.29.0"

[lints.cargo]
complexity = { level = "deny", priority = -1 }
# implicit_minimum_version_req = "deny"
non_kebab_case_features = "deny"
non_kebab_case_packages = "deny"
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# non_snake_case_features = "deny"
# non_snake_case_packages = "deny"

[lints.clippy]
absolute_paths = "warn"
arithmetic_side_effects = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
branches_sharing_code = "warn"
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
expect_used = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_stack_frames = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
min_ident_chars = "warn"
module_name_repetitions = "warn"
modulo_arithmetic = "warn"
multiple_crate_versions = "allow"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
panic = "warn"
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
redundant_clone = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_lit_as_bytes = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_struct_initialization = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_rounding = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
use_self = "warn"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
dead_code = "allow"
deprecated_safe = { level = "warn", priority = -1 }
deref_into_dyn_supertrait = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
keyword_idents = { level = "warn", priority = -1 }
let_underscore_drop = "warn"
linker_messages = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
# missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"
# missing_docs = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
# unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
# unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
# unused_results = "warn"
variant_size_differences = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"

[patch.crates-io]
apple-codesign = { git = "https://github.com/indygreg/apple-platform-rs.git" }
